tried to fix gap at top of webpage again

--- a/docs/main.css
+++ b/docs/main.css
@@ -24,6 +24,10 @@
   src: local("Segoe UI Semibold"), url(//c.s-microsoft.com/static/fonts/segoe-ui/west-european/semibold/latest.woff2) format("woff2"), url(//c.s-microsoft.com/static/fonts/segoe-ui/west-european/semibold/latest.woff) format("woff"), url(//c.s-microsoft.com/static/fonts/segoe-ui/west-european/semibold/latest.ttf) format("truetype");
   font-weight: 700;
 }
+* {
+  overflow: hidden;
+}
+
 html {
   margin: 0;
   padding: 0;
@@ -111,7 +115,6 @@ nav li :hover {
 @media only screen and (max-width: 1200px) {
   #mobile-nav-button {
     position: fixed;
-    margin-top: 0;
     width: 100%;
     padding: 15px;
     font-family: "SegoeUI", "Roboto", "Noto Sans", sans-serif;
